--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/owl.theme.default.css">
 		<meta name="msapplication-TileImage" content="http://www.panapuestas.com/assets/media/favicon/ms-icon-144x144.png">
-		<meta name="viewport" content="width=device-width, initial-scale=0.38, maximum-scale=1" , user-scalable="0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0>
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="HandheldFriendly" content="true">
 		<meta name="theme-color" content="#ffffff">
@@ -149,7 +149,7 @@
 			<div id="alertemail"></div>
 				<table id="botoneinicio">
 								<td>
-									<input id="iniciar_sesion" style="width: 120px; cursor: pointer !important;" class="sendinput" type="button" name="psend" value="Iniciar Sesión">
+									<input id="iniciar_sesion" style="width:100%; cursor: pointer !important;" class="sendinput" type="button" name="psend" value="Iniciar Sesión">
 								</td>
 							</tr>
 						</table>
